# AskLore

./: .gitignore  AskLore_Implementation_Plan.md  CLAUDE.md  Makefile  README.md  pyproject.toml  template.yaml
.claude/: settings.json
.claude/commands/: deploy.md
.claude/skills/deploy-gotchas/: SKILL.md
config/: dev.json  prod.json  test.json
docs/: AskLore_RAG_refactor.md  asklore-gemini-migration-plan.md
lambda/chunking/: handler.py
lambda/dedup/: handler.py
lambda/embedding/: handler.py
lambda/ingestion-trigger/: handler.py
lambda/kb-index-setup/: handler.py  requirements.txt
lambda/retrieval/: handler.py  requirements.txt
scripts/: build-and-deploy.sh  index-all.py
seed-data/incident-postmortems/: 2026-02-14-payment-service-outage.md  2026-03-02-checkout-latency-spike.md  2026-03-20-redis-cache-stampede.md  2026-04-05-ssl-cert-expiry-incident.md  2026-04-18-dns-failover-delay.md
seed-data/infra-runbooks/: auto-scaling-issues.md  cloudwatch-alarm-response.md  database-failover.md  deployment-rollback.md  dns-propagation.md  ec2-high-cpu.md  incident-response-checklist.md  lambda-timeout-debugging.md  load-balancer-health-checks.md  log-analysis-guide.md  on-call-escalation.md  payment-service-restart.md  production-deployment.md  rds-connection-issues.md  redis-cache-flush.md  s3-access-issues.md  security-group-changes.md  ssl-cert-rotation.md
tests/: conftest.py
tests/unit/dedup/: test_handler.py
tests/unit/ingestion_trigger/: test_handler.py
tests/unit/kb_index_setup/: test_handler.py
ui/: app.py  requirements.txt
(+1 files in other folders)
