[project]
name = "asklore"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
# Lambda build dependencies — installed into build/ dirs, not the venv
# Run: bash scripts/build-and-deploy.sh

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long — enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]  # allow print() in scripts
