[project]
name = "asklore"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
# Local dev/test env (`uv sync`) — union of every lambda/*/requirements.txt
# plus pytest/ruff. Lambda deployment packages are still built separately
# into build/ dirs by scripts/build-and-deploy.sh, not from this group.
dev = [
    "pytest>=7.2.0",
    "ruff>=0.6.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "opensearch-py>=2.4.0",
    "requests-aws4auth>=1.2.0",
    "requests>=2.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long — enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]  # allow print() in scripts
